# TVM

./: .gitignore  beautifier.sed  build.sbt  getTools.sh  presentation.tex  test.sh  tokensToCode.awk  tokensToCode.sed
program/: 99bottles.tool  ArmstrongNumber.tool  ArrayList.tool  Arrays.tool  BaseConverter.tool  Bezout.tool  BinaryTree.tool  BubbleSort.tool  CrossProduct.tool  DecToBinAndHex.tool  Double.tool  Expression.tool  Factorial1.tool  Fibonacci.tool  GCD.tool  GCDandLCM.tool  Hanoi.tool  HeapSort.tool  Hello.tool  HelloWorld.tool  InsertionSort.tool  IsPrime.tool  LinearSearch.tool  MatrixOperations.tool  MergeSort.tool  MinMaxArray.tool  MyArray.tool  MyFact.tool  Nodes.tool  PGCD.tool  Palindrome.tool  Pascal.tool  (+37 more)
tvm/: Makefile.am  Makefile.in  Tupfile  Tuprules.tup  config.h.in  configure  configure.ac  tvm.cbp  tvm.depend  tvm.layout
tvm/build-debug/: tup.config
tvm/build-release/: tup.config
tvm/include/: attribute.hpp  attribute_h.hpp  bc.hpp  clss.hpp  cp.hpp  cp_h.hpp  field.hpp  field_h.hpp  file.hpp  file_h.hpp  interface.hpp  interface_h.hpp  manager.hpp  manager_h.hpp  methods.hpp  methods_h.hpp  opcode.hpp  opcode_h.hpp  pool.hpp  self.hpp  type.hpp  type_name.hpp  type_val.hpp  util.hpp  util_h.hpp  val.hpp  vm.hpp  vm_h.hpp
tvm/macro/: attribute.m  attribute_unchecked.m  cp.m  cp_unchecked.m  opcode.m  opcode_unchecked.m
tvm/macro/opcode/: iconst  load.m  opcode  opcode.m  push
tvm/macro/opcode/parse/: trivial
tvm/src/: Tupfile  attribute.cpp  bc.cpp  clss.cpp  cp.cpp  field.cpp  file.cpp  interface.cpp  main.cpp  manager.cpp  methods.cpp  opcode.cpp  self.cpp  type.cpp  type_name.cpp  type_val.cpp  val.cpp  vm.cpp
tvm/src/bc/: Tupfile  attribute.c  attribute.h  attribute.m  attribute_checked.m  attribute_type.h  bc  bc.c  bc.h  bc_type.h  config.h  cp.c  cp.h  cp_tag_macro.m  cp_tag_no_utf8.m  cp_type.c  cp_type.h  field.c  field.h  field_type.h  interface.c  interface.h  main.c  method.c  method.h  method_type.h  this.c  this.h  this_type.h  util.c  util.h  util.m
tvm/src/sm/: Tupfile  main.c  sm  sm.c  sm.h  sm.m  sm_type.h  sm_unchecked.m
(+116 files in other folders)
