bin_PROGRAMS	= tvm
tvm_SOURCES	=				\
		  include/attribute.hpp		\
		  include/attribute_h.hpp	\
		  include/bc.hpp		\
		  include/bc_h.hpp		\
		  include/clss.hpp		\
		  include/cp.hpp		\
		  include/cp_h.hpp		\
		  include/field.hpp		\
		  include/field_h.hpp		\
		  include/file.hpp		\
		  include/file_h.hpp		\
		  include/interface.hpp		\
		  include/interface_h.hpp	\
		  include/manager.hpp		\
		  include/manager_h.hpp		\
		  include/methods.hpp		\
		  include/methods_h.hpp		\
		  include/opcode.hpp		\
		  include/opcode_h.hpp		\
		  include/pool.hpp		\
		  include/self.hpp		\
		  include/self_h.hpp		\
		  include/type.hpp		\
		  include/util.hpp		\
		  include/util_h.hpp		\
		  include/vm.hpp		\
		  include/vm_h.hpp		\
		  				\
		  macro/attribute		\
		  macro/cp			\
		  macro/opcode/iconst		\
		  macro/opcode/load		\
		  macro/opcode/opcode		\
		  macro/opcode/push		\
		  macro/opcode/parse/trivial	\
		  				\
		  src/attribute.cpp		\
		  src/bc.cpp			\
		  src/clss.cpp			\
		  src/cp.cpp			\
		  src/field.cpp			\
		  src/file.cpp			\
		  src/interface.cpp		\
		  src/main.cpp			\
		  src/manager.cpp		\
		  src/methods.cpp		\
		  src/opcode.cpp		\
		  src/pool.cpp			\
		  src/self.cpp			\
		  src/type.cpp			\
		  src/util.cpp			\
		  src/vm.cpp

tvm_CPPFLAGS	= -I$(srcdir)/include
